--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
      com.gamemaker.game
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.cleverraven.cataclysmdda"
     android:versionCode="1"
     android:versionName="1.0"
     android:installLocation="auto">
@@ -44,13 +43,14 @@
                   android:keepScreenOn="true"
                   android:screenOrientation="userLandscape"
                   android:configChanges="keyboardHidden|keyboard|orientation|screenSize|navigation"
+                  android:exported="true"
                   >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="CataclysmDDA"
+        <activity android:name="CataclysmBN"
                   android:label="@string/app_name"
                   android:launchMode="singleInstance"
                   android:keepScreenOn="true"
