--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,7 +18,7 @@ org.gradle.jvmargs=-Xmx1536m
 
 # This property controls the number of jobs sent by -j switch to ndk-build
 # You can override this from the command line by passing "-Pj=#"
-j=2
+j=10
 
 # This property controls whether build should be run with localization
 # You can override this from the command line by passing "-Plocalize=#"
@@ -50,20 +50,26 @@ override_version=
 
 # This property controls path where overridden version number header should be generated
 # You can override this from the command line by passing "-Pversion_header_path=#"
-version_header_path=app/jni/src/version.h
+version_header_path=./../src/version.h
 
 # This property controls which compileSdkVersion should be used
 # You can override this from the command line by passing "-Poverride_compileSdkVersion=#"
-override_compileSdkVersion=29
+override_compileSdkVersion=31
 
 # This property controls which minSdkVersion should be used
 # You can override this from the command line by passing "-Poverride_minSdkVersion=#"
-override_minSdkVersion=14
+override_minSdkVersion=21
 
 # This property controls which targetSdkVersion should be used
 # You can override this from the command line by passing "-Poverride_targetSdkVersion=#"
-override_targetSdkVersion=29
+override_targetSdkVersion=31
 
 # This property controls which ndkBuildAppPlatform should be used
 # You can override this from the command line by passing "-Poverride_ndkBuildAppPlatform=#"
-override_ndkBuildAppPlatform=android-16
+override_ndkBuildAppPlatform=android-21
+
+# This property controls which ndkVersion should be used
+# You can override this from the command line by passing "-Poverride_ndkVersion=#"
+override_ndkVersion=25.2.9519653
+android.useAndroidX=true
+android.enableJetifier=true
