--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,11 +1,13 @@
 {
   "tasks": {
-    "tools": "deno run --watch -A"
+    "tools": "deno run --watch -A",
+    "docs:lua": "./cataclysm-tiles --lua-doc && cp config/lua_doc.md docs/src/content/docs/en/reference/lua.md"
   },
   "test": { "include": ["./tools"] },
   "lint": { "include": ["./tools"] },
   "fmt": {
-    "include": ["./tools", "./doc", "*.md"],
+    "exclude": ["./docs/dist"],
+    "include": ["./tools", "./doc", "./docs", "*.md"],
     "semiColons": false,
     "lineWidth": 100
   }
