ci: use merge queue (#3252)

--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -7,6 +7,9 @@ on:
     paths-ignore:
       - doc/**
       - 'scripts/**'
+  merge_group:
+    branches:
+      - upload
   pull_request:
     branches:
       - upload
