ci: don't skip checks in merge group (#3285)
hope it works

--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -8,8 +8,7 @@ on:
       - doc/**
       - 'scripts/**'
   merge_group:
-    branches:
-      - upload
+    types: [checks_requested]
   pull_request:
     branches:
       - upload
