--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,7 @@ concurrency: release
 on:
   schedule:
     - cron: "0 0 * * *"
+  workflow_dispatch:
 
 env:
   VCPKG_BINARY_SOURCES: "default"
@@ -10,6 +11,7 @@ env:
 jobs:
   commits:
     runs-on: ubuntu-latest
+    if: github.event_name != 'workflow_dispatch'
     outputs:
       count: ${{ steps.yesterday.outputs.count }}
     steps:
@@ -21,7 +23,7 @@ jobs:
 
   release:
     needs: commits
-    if: fromJSON(needs.commits.outputs.count) > 0
+    if: github.event_name == 'workflow_dispatch' || fromJSON(needs.commits.outputs.count) > 0
     name: Create Release
     runs-on: ubuntu-22.04
     outputs:
