--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,6 @@ env:
 jobs:
   commits:
     runs-on: ubuntu-latest
-    if: github.event_name != 'workflow_dispatch'
     outputs:
       count: ${{ steps.yesterday.outputs.count }}
     steps:
@@ -23,7 +22,7 @@ jobs:
 
   release:
     needs: commits
-    if: github.event_name == 'workflow_dispatch' || fromJSON(needs.commits.outputs.count) > 0
+    if: fromJSON(needs.commits.outputs.count) > 0
     name: Create Release
     runs-on: ubuntu-22.04
     outputs:
